# dbt_test

./: .gitignore  pyproject.toml
sec_api/: 0.ipynb
second_try/: dbt_project.yml
test_duck/: dbt_project.yml
