[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["nick"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
acryl-datahub = "^0.12.1.3"
dbt = "^1.0.0.35.1"
pandas = "^2.2.0"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
